--- a/Modules/EMSegment/Qt/Widgets/Plugins/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Widgets/Plugins/CMakeLists.txt
@@ -35,9 +35,9 @@ SET(designer_plugin_TARGET_LIBRARIES
   qSlicerEMSegmentModule
   )
 
-qctk_build_designer_plugin(
-  NAME ${PROJECT_NAME}
-  SRCS ${designer_plugin_SRCS}
-  MOC_SRCS ${designer_plugin_MOC_SRCS}
-  TARGET_LIBRARIES ${designer_plugin_TARGET_LIBRARIES}
-  )
+#qctk_build_designer_plugin(
+#  NAME ${PROJECT_NAME}
+#  SRCS ${designer_plugin_SRCS}
+#  MOC_SRCS ${designer_plugin_MOC_SRCS}
+#  TARGET_LIBRARIES ${designer_plugin_TARGET_LIBRARIES}
+#  )
