COMP: EMSegment4: A minimum CMake version has to be in the top-level CMakeLists.txt.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16756 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -3,6 +3,7 @@
 # EM Segmenter for 3D Slicer3 and 3D Slicer4
 #
 # --------------------------------------------------------------------------
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 # --------------------------------------------------------------------------
 # Detect if we build for Slicer3 or Slicer4 and set EM_Slicer4_FOUND accordingly
