COMP: fix to compile against vtk 5.8
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16776 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -372,6 +372,9 @@ IF (VTK_WRAP_TCL)
     set(INCR_TCL_VERSION_DOT "${INCR_TCL_MAJOR_VERSION}.${INCR_TCL_MINOR_VERSION}")
     set(INCR_TCL_VERSION "${INCR_TCL_MAJOR_VERSION}${INCR_TCL_MINOR_VERSION}")
   ENDIF(Slicer3_USE_KWWIDGETS)
+  if(VTK_TCL_INCLUDE_DIR)
+    include_directories("${VTK_TCL_INCLUDE_DIR}" "${VTK_TK_INCLUDE_DIR}")
+  endif(VTK_TCL_INCLUDE_DIR)
 ENDIF (VTK_WRAP_TCL)
 
 #-----------------------------------------------------------------------------
