ENH: EMSegment4: Simple mode ready for testing.
 * Several enhancements to enable the simple mode in 3D Slicer 4.



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16780 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(EMS_PYTHON_SCRIPTS
   )
   
 SET(EMS_PYTHON_RESOURCES
+  Resources/qSlicerEMSegmentModule.qrc
   )
   
 ctkMacroCompilePythonScript(
