COMP: switch to tcl 8.5 cmake 2.8.5 on all platforms and require git
Update packages to work with Ubuntu 11.04 and related debian versions 
that have new directory layout (VTK would not build without the
latest version of CMake).  Also new compiler flags enforce stricter
checking of memory accesses so a newer version of tk was required
to avoid a runtime error.  Even though these issues were restricted
to ubuntu/debian, all platforms will now use tcl 8.5 in order to 
have consistent behavior and appearance.

Because the newer cmake repository is only available via git,
it is now a requirement for for building slicer.



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16814 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -720,6 +720,11 @@ proc launch_SetPaths {} {
     set ::env(TCLLIBPATH) "$::env(TCL_DIR)/lib/iwidgets4.0.1 $::env(TCLLIBPATH)"
     set ::env(TCLLIBPATH) "$::env(TCL_DIR)/lib/blt2.4 $::env(TCLLIBPATH)"
 
+    # new location for windows version of activetcl 8.5
+    if { $::env(BUILD) == $::WINDOWS } {
+      set ::env(TCLLIBPATH) "$::env(TCL_DIR)/lib/teapot/package/win32-ix86/lib/Itcl3.4 $::env(TCLLIBPATH)"
+    }
+
     #
     # add the default search locations for python packages for a slicer build of python
     #
