BUG: remove unused libraries that do not link correctly against the newer tcl/tk version
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16821 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -33,8 +33,8 @@ SET(dirs ${dirs}
 IF(Slicer3_USE_KWWIDGETS)
   SET(dirs ${dirs}
     GenerateLM
-    SlicerIO
-    ITKCommandIO
+    #SlicerIO
+    #ITKCommandIO
     )
 ENDIF(Slicer3_USE_KWWIDGETS)
 
@@ -84,7 +84,7 @@ set(LoadableModule_USE_PYTHON ${Slicer3_USE_PYTHON})
 
 set(IGT_USE_IGSTK ${Slicer3_USE_IGSTK})
 set(IGT_USE_NAVITRACK ${Slicer3_USE_NAVITRACK})
-set(ITKCommandIO_INSTALL_ITKFACTORIES_DIR ${Slicer3_INSTALL_ITKFACTORIES_DIR})
+#set(ITKCommandIO_INSTALL_ITKFACTORIES_DIR ${Slicer3_INSTALL_ITKFACTORIES_DIR})
 set(MGHImageIO_INSTALL_ITKFACTORIES_DIR ${Slicer3_INSTALL_ITKFACTORIES_DIR})
 set(MRMLIDImageIO_INSTALL_ITKFACTORIES_DIR ${Slicer3_INSTALL_ITKFACTORIES_DIR})
 
@@ -105,9 +105,9 @@ slicer3_get_persistent_property(Slicer3_Libs_INCLUDE_DIRS tmp)
 slicer3_set_persistent_property(Slicer3_Libs_INCLUDE_DIRS ${tmp} ${include_dirs})
 # Inconsistent library name vs. project/dir name :(
 
-string(REPLACE ITKCommandIO CommandIO libs "${libs}")
+# string(REPLACE ITKCommandIO CommandIO libs "${libs}")
 IF(Slicer3_USE_KWWIDGETS)
-  string(REPLACE SlicerIO slicerio libs "${libs}")
+  #string(REPLACE SlicerIO slicerio libs "${libs}")
 ENDIF(Slicer3_USE_KWWIDGETS)
 string(REPLACE MGHImageIO MGHIO libs "${libs}")
 string(REPLACE MRMLIDImageIO MRMLIDIO libs "${libs}")
