ENH: EMSegment4: Added plot distributions functionality.
* Also fixed the following:
** remove auto-sampling
** grey out forward button instead of hiding in step 9
** put emsegmenter in category segmentation
** order task list alphabetically




git-svn-id: http://svn.slicer.org/Slicer3/trunk@16831 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Widgets/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Widgets/CMakeLists.txt
@@ -23,8 +23,8 @@ SET(module_widgets_SRCS
   qSlicerEMSegmentInputChannelListWidget.h
   qSlicerEMSegmentInputChannelListWidget.cxx
   
-  #qSlicerEMSegmentGraphWidget.h
-  #qSlicerEMSegmentGraphWidget.cxx
+  qSlicerEMSegmentGraphWidget.h
+  qSlicerEMSegmentGraphWidget.cxx
   
   qSlicerEMSegmentAnatomicalTreeWidget.h
   qSlicerEMSegmentAnatomicalTreeWidget.cxx
@@ -38,7 +38,7 @@ SET(module_widgets_SRCS
 SET(module_widgets_MOC_SRCS
   qSlicerEMSegmentAnatomicalTreeWidget.h
   qSlicerEMSegmentAnatomicalTreeWidget_p.h
-  #qSlicerEMSegmentGraphWidget.h
+  qSlicerEMSegmentGraphWidget.h
   qSlicerEMSegmentInputChannelListWidget.h
   qSlicerEMSegmentWidget.h
   )
@@ -46,7 +46,7 @@ SET(module_widgets_MOC_SRCS
 # UI files
 SET(module_widgets_UI_SRCS
   Resources/UI/qSlicerEMSegmentAnatomicalTreeWidget.ui
-  #Resources/UI/qSlicerEMSegmentGraphWidget.ui  
+  Resources/UI/qSlicerEMSegmentGraphWidget.ui  
   )
 
 # Resources
